--- a/k8s/odoo/virtualservice.yaml
+++ b/k8s/odoo/virtualservice.yaml
@@ -13,5 +13,5 @@ spec:
         routeAction:
           single:
             upstream:
-              name: default-odoo-app-8069
+              name: odoo-odoo-80
               namespace: gloo-system
