--- a/images/odoo/Dockerfile
+++ b/images/odoo/Dockerfile
@@ -1,3 +1,3 @@
 FROM odoo:17
-COPY odoo.conf /etc/odoo/odoo.conf
-CMD ["odoo", "-c", "/etc/odoo/odoo.conf"]
+# COPY odoo.conf /etc/odoo/odoo.conf
+# CMD ["odoo", "-c", "/etc/odoo/odoo.conf"]
