--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         - name: odoo-config
           configMap:
             name: odoo-config
-      initContainers:
-      - name: init-odoo-db
-        image: odoo-local:17
-        command: ["odoo", "-c", "/etc/odoo/odoo.conf", "-d", "odoo", "-i", "base", "--stop-after-init"]
+      # initContainers:
+      # - name: init-odoo-db
+      #   image: odoo-local:17
+      #   command: ["odoo", "-c", "/etc/odoo/odoo.conf", "-d", "odoo", "-i", "base", "--stop-after-init"]
