--- a/k8s/odoo/configmap.yaml
+++ b/k8s/odoo/configmap.yaml
@@ -12,3 +12,11 @@ data:
     db_password = odoo
     data_dir = /var/lib/odoo
     admin_passwd = admin
+
+    server_wide_modules = web,fs_storage,fs_attachment,fs_attachment_s3
+
+    ; RustFS (S3-compatible) config
+    fs_attachment_s3_endpoint_url = http://rustfs.rustfs.svc.cluster.local:9000
+    fs_attachment_s3_bucket = odoo-filestore
+    fs_attachment_s3_region = us-east-1
+    fs_attachment_s3_use_ssl = false
