added secrets and region to deployment

--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -19,6 +19,22 @@ spec:
           args:
             - "-c"
             - "/etc/odoo/odoo.conf"
+          env:
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: rustfs-s3-credentials
+                  key: AWS_ACCESS_KEY_ID
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: rustfs-s3-credentials
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: AWS_DEFAULT_REGION
+              valueFrom:
+                secretKeyRef:
+                  name: rustfs-s3-credentials
+                  key: AWS_DEFAULT_REGION
           ports:
             - containerPort: 8069
           volumeMounts:
