--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -40,6 +40,8 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /var/lib/odoo
+            - name: odoo-addons
+              mountPath: /var/lib/odoo/addons/17.0
             - name: odoo-config
               mountPath: /etc/odoo/odoo.conf
               subPath: odoo.conf
@@ -51,7 +53,6 @@ spec:
         - name: odoo-config
           configMap:
             name: odoo-config
-      # initContainers:
-      # - name: init-odoo-db
-      #   image: odoo-local:17
-      #   command: ["odoo", "-c", "/etc/odoo/odoo.conf", "-d", "odoo", "-i", "base", "--stop-after-init"]
+        - name: odoo-addons
+          persistentVolumeClaim:
+            claimName: odoo-addons
