--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -78,5 +78,5 @@ spec:
               echo "Final addons content:"
               ls -la /addons
           volumeMounts:
-            - name: extra-addons
+            - name: odoo-addons
               mountPath: /addons
