--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -15,13 +15,11 @@ spec:
     spec:
       containers:
         - name: odoo
-          image: odoo-local:17
+          image: odoo-custom:17
           args:
             - "-c"
             - "/etc/odoo/odoo.conf"
           env:
-            - name: PYTHONPATH
-              value: /opt/odoo-python-deps
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
@@ -42,10 +40,6 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /var/lib/odoo
-            - name: odoo-python-deps
-              mountPath: /opt/odoo-python-deps
-            - name: odoo-addons
-              mountPath: /var/lib/odoo/addons/17.0
             - name: odoo-config
               mountPath: /etc/odoo/odoo.conf
               subPath: odoo.conf
@@ -57,49 +51,3 @@ spec:
         - name: odoo-config
           configMap:
             name: odoo-config
-        - name: odoo-python-deps
-          persistentVolumeClaim:
-            claimName: odoo-python-deps
-        - name: odoo-addons
-          persistentVolumeClaim:
-            claimName: odoo-addons
-      initContainers:
-        - name: install-python-deps
-          image: python:3.10-alpine
-          command: ["/bin/sh", "-lc"]
-          args:
-            - |
-              set -eux
-              python -V
-              pip install --no-cache-dir --target /deps fsspec s3fs boto3
-              python -c "import sys; sys.path.insert(0,'/deps'); import fsspec, s3fs, boto3; print('deps-ok')"
-              ls -la /deps | head
-          volumeMounts:
-            - name: odoo-python-deps
-              mountPath: /deps
-        - name: init-odoo-addons
-          image: alpine/git:latest
-          command: ["/bin/sh", "-lc"]
-          args:
-            - |
-              set -eux
-
-              echo "Cleaning addons directory"
-              rm -rf /addons/*
-
-              echo "Cloning OCA storage addons (17.0)"
-              git clone --depth 1 -b 17.0 https://github.com/OCA/storage.git /tmp/storage
-
-              echo "Copying required modules"
-              cp -R /tmp/storage/fs_storage /addons/
-              cp -R /tmp/storage/fs_attachment /addons/
-              cp -R /tmp/storage/fs_attachment_s3 /addons/
-
-              git clone --depth 1 -b 17.0 https://github.com/OCA/server-env.git /tmp/server-env
-              cp -R /tmp/server-env/server_environment /addons/
-
-              echo "Final addons content:"
-              ls -la /addons
-          volumeMounts:
-            - name: odoo-addons
-              mountPath: /addons
