--- a/k8s/odoo/configmap.yaml
+++ b/k8s/odoo/configmap.yaml
@@ -12,6 +12,7 @@ data:
     db_password = odoo
     data_dir = /var/lib/odoo
     admin_passwd = admin
+    addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 
     server_wide_modules = web
 
