--- a/images/odoo/Dockerfile
+++ b/images/odoo/Dockerfile
@@ -1,9 +1,17 @@
 FROM alpine/git:latest AS addons-builder
 
-WORKDIR /repos
+WORKDIR /addons
 
-RUN git clone --depth 1 -b 17.0 https://github.com/OCA/storage.git
-RUN git clone --depth 1 -b 17.0 https://github.com/OCA/server-env.git
+# esto hacerlo mas ordenado sin los cp
+RUN git clone --depth 1 -b 17.0 https://github.com/OCA/storage.git /tmp/storage \
+    && cp -R /tmp/storage/fs_storage . \
+    && cp -R /tmp/storage/fs_attachment . \
+    && cp -R /tmp/storage/fs_attachment_s3 . \
+    && rm -rf /tmp/storage
+
+RUN git clone --depth 1 -b 17.0 https://github.com/OCA/server-env.git /tmp/server-env \
+    && cp -R /tmp/server-env/server_environment . \
+    && rm -rf /tmp/server-env
 
 # etapa2
 FROM odoo:17
@@ -12,10 +20,7 @@ USER root
 
 RUN pip install --no-cache-dir fsspec s3fs boto3
 
-COPY --from=addons-builder /repos/storage/fs_storage /mnt/extra-addons/fs_storage
-COPY --from=addons-builder /repos/storage/fs_attachment /mnt/extra-addons/fs_attachment
-COPY --from=addons-builder /repos/storage/fs_attachment_s3 /mnt/extra-addons/fs_attachment_s3
-COPY --from=addons-builder /repos/server-env/server_environment /mnt/extra-addons/server_environment
+COPY --from=addons-builder /addons /mnt/extra-addons/
 
 RUN ls -la /mnt/extra-addons/
 
