addons error fix 3

--- a/images/odoo/Dockerfile
+++ b/images/odoo/Dockerfile
@@ -1,24 +1,27 @@
+FROM alpine/git:latest AS addons-builder
+
+WORKDIR /addons
+
+# esto hacerlo mas ordenado sin los cp
+RUN git clone --depth 1 -b 17.0 https://github.com/OCA/storage.git /tmp/storage \
+    && cp -R /tmp/storage/fs_storage . \
+    && cp -R /tmp/storage/fs_attachment . \
+    && cp -R /tmp/storage/fs_attachment_s3 . \
+    && rm -rf /tmp/storage
+
+RUN git clone --depth 1 -b 17.0 https://github.com/OCA/server-env.git /tmp/server-env \
+    && cp -R /tmp/server-env/server_environment . \
+    && rm -rf /tmp/server-env
+
+# etapa2
 FROM odoo:17
 
 USER root
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    git \
-    && rm -rf /var/lib/apt/lists/*
-
 RUN pip install --no-cache-dir fsspec s3fs boto3
 
-RUN git clone --depth 1 -b 17.0 https://github.com/OCA/storage.git /tmp/storage \
-    && cp -R /tmp/storage/fs_storage /mnt/extra-addons/ \
-    && cp -R /tmp/storage/fs_attachment /mnt/extra-addons/ \
-    && cp -R /tmp/storage/fs_attachment_s3 /mnt/extra-addons/ \
-    && rm -rf /tmp/storage
-
-RUN git clone --depth 1 -b 17.0 https://github.com/OCA/server-env.git /tmp/server-env \
-    && cp -R /tmp/server-env/server_environment /mnt/extra-addons/ \
-    && rm -rf /tmp/server-env
+COPY --from=addons-builder /addons /mnt/extra-addons/
 
 RUN ls -la /mnt/extra-addons/
 
 USER odoo
-
