--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -19,6 +19,10 @@ spec:
           args:
             - "-c"
             - "/etc/odoo/odoo.conf"
+            - "-d"
+            - "odoo"
+            - "-i"
+            - "base"
           env:
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
