--- a/k8s/odoo/rustfs-s3-secret.yaml
+++ b/k8s/odoo/rustfs-s3-secret.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: odoo
 type: Opaque
 stringData:
-  AWS_ACCESS_KEY_ID: "OM0glFPNXQI49nyfLk3D"
-  AWS_SECRET_ACCESS_KEY: "uK0mgESziV6P7C259x8IrpF1WURfnNXcHy4BYdQe" #En estos necesito hacerlo de otra manera en el futuro, no sirve solo que quede en base64 (usar algun proveedor de secrets)
+  AWS_ACCESS_KEY_ID: "4mWfCRQvZz1M0XluxFna"
+  AWS_SECRET_ACCESS_KEY: "yDQU2lL7vZuonPC094NHhTKcriwBEx35MtJsaXVp" #En estos necesito hacerlo de otra manera en el futuro, no sirve solo que quede en base64 (usar algun proveedor de secrets)
   AWS_DEFAULT_REGION: "us-east-1"
