--- a/k8s/odoo/deployment.yaml
+++ b/k8s/odoo/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: odoo
           image: odoo-custom:17
+          imagePullPolicy: Always
           args:
             - "-c"
             - "/etc/odoo/odoo.conf"
